<resources>
    <string name="app_name">App Prototype</string>
    <string name="already_have_text"><u>Already have an account?</u></string>
    <string name="sign_up">Sign Up!</string>
    <string name="email">Email</string>
    <string name="confirm">Confirm</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="register">Register</string>
    <string name="facebook_button_description">Button for connecting a Facebook account</string>
    <string name="logo_here">Logo Here</string>
    <string name="user_email_hint">Username/Email</string>
    <string name="no_account"><u>Don\'t have an account?</u></string>
    <string name="forgot_pass"><u>Forgot your password?</u></string>
    <string name="remember_password"><u>Remember password?</u></string>
    <string name="enter_email">Enter In Your Email</string>
    <string name="recovery_reminder">*Reminder: If the email address you registered is not valid, the email recovery method will not work.*</string>
    <string name="submit">Submit</string>
    <string name="logo">Logo</string>
</resources>
