<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:id="@+id/layoutContainer" android:orientation="horizontal"
    android:background="#151617" android:baselineAligned="false">
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.15"
        android:id="@+id/surroundingLayout">
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.7">

        <!-- This is the part that's 70% of the total width. I'm inserting a LinearLayout and buttons.-->

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userField"
            android:background="#8B9699"
            android:textSize="25sp"
            android:singleLine="true"
            android:hint="@string/user_email_hint"
            android:paddingStart="3dp"
            android:paddingEnd="0dp"
            android:layout_marginTop="53dp"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passField"
            android:background="#8B9699"
            android:textSize="25sp"
            android:singleLine="true"
            android:hint="@string/password_hint"
            android:paddingStart="3dp"
            android:paddingEnd="0dp"
            android:layout_below="@+id/userField"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:inputType="textPassword"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/button"
            android:textSize="25sp"
            android:background="@drawable/signupbutton"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:singleLine="true"
            android:layout_marginTop="47dp"
            android:layout_below="@+id/passField"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgotPassText"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/forgot_pass"
            android:textColor="#eeebeb"
            android:onClick="retrievePass"
            android:singleLine="true"
            android:layout_below="@+id/button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/haveAccountText"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/no_account"
            android:textColor="#eeebeb"
            android:onClick="signUp"
            android:singleLine="true"
            android:layout_below="@+id/forgotPassText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/facebookButton"
            android:src="@drawable/facebookbutton"
            android:contentDescription="@string/facebook_button_description"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <!-- 70% Width End-->

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.15"
        android:id="@+id/surroundingLayout2">
    </RelativeLayout>
</LinearLayout>
