<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:id="@+id/layoutContainer" android:orientation="horizontal"
    android:background="#151617" android:baselineAligned="false">
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.15"
        android:id="@+id/surroundingLayout">
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.7">

        <!-- This is the part that's 70% of the total width. I'm inserting a LinearLayout and buttons.-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recovery_reminder"
            android:id="@+id/textView"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="#f71313"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="34dp" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/userField"
            android:background="#8B9699"
            android:textSize="25sp"
            android:singleLine="true"
            android:hint="@string/enter_email"
            android:paddingStart="3dp"
            android:paddingEnd="0dp"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_marginTop="38dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/button"
            android:textSize="25sp"
            android:background="@drawable/signupbutton"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:singleLine="true"
            android:layout_below="@+id/userField"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/haveAccountText"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/remember_password"
            android:textColor="#eeebeb"
            android:onClick="login"
            android:singleLine="true"
            android:layout_below="@+id/button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="68dp" />

        <!-- 70% Width End-->

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="0.15"
        android:id="@+id/surroundingLayout2">
    </RelativeLayout>
</LinearLayout>
